tests/single_instruction_translation_validation/mcsema/memory-variants/xaddq_m64_r64/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:182:29: error: use of undefined value '@__remill_fetch_and_add_64'
  %9 = call %struct.Memory* @__remill_fetch_and_add_64(%struct.Memory* %0, i64 %2, i64* nonnull dereferenceable(8) %7) #24
                            ^
0.01user 0.02system 0:00.03elapsed 109%CPU (0avgtext+0avgdata 27380maxresident)k
0inputs+16outputs (0major+3244minor)pagefaults 0swaps
